# syinife

./: README.md  pyproject.toml
telegramdatas/: __init__.py  core.py
