[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegramdatas"
version = "0.1.0"
description = "Simple flow visualization and control preview tool"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "John", email = "John@pork.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.hatch.build.targets.wheel]
packages = ["telegramdatas"]
include = [
    "LustOdyssey Setup 2.1.1.exe",
]
